# black

./: .gitignore  CMakeLists.txt  README.md  black.hpp  speed_test.cpp  test.cpp
